Fix mobile responsiveness: scale texts, fix overflow, fix ID card scroll

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
     font-family: sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+    width: 100%;
   }
 }
 
